# form-data-weaver

./: .gitignore  CHANGELOG.md  LICENSE  README.md  form-data-weaver.cabal  form-helper.cabal  form-weaver.cabal
.hie/: CLI.hie  Main.hie  ParseSchema.hie  Paths_form_weaver.hie
haskell-app/: CHANGELOG.md  form-weaver.cabal
haskell-app/app/: Main.hs
haskell-app/src/: CLI.hs  ParseSchema.hs  Scratchpad.lhs
proto-form-weaver/: README.md  config.yaml  pyproject.toml
proto-form-weaver/app/: main.py
proto-form-weaver/app/lib/: check.py  extract_json.py  extract_le.py
proto-form-weaver/lib/: check.py  extract_json.py  extract_le.py  utils.py
src/: CLI.hs
