[tool.poetry]
name = "proto-form-weaver"
version = "0.1.0"
description = ""
authors = ["ymh <hanyongming@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.9.0"
hydra-core = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
