[tool.poetry]
name = "proto-form-weaver"
version = "0.1.0"
description = ""
authors = ["ymh <hanyongming@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
typer = "^0.9.0"
hydra-core = "^1.3.2"
pyyaml = "^6.0.1"
rich = "^13.6.0"
toolz = "^0.12.0"
jsonref = "^1.1.0"
networkx = "^3.2.1"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.1"
jsonpath-ng = "^1.6.0"
ujson = "^5.8.0"


[tool.poetry.group.dev.dependencies]
ipython = "8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
